src/test/deca/context/invalid/ContextAvecObjet/DeclFields/sameFieldsclassAextendsB.deca
// Description:
//    Déclaration de champs de même nom entre une classe mère et une classe fille
//
// Resultats:
//    Erreur contextuelle
//    Nom de champs déjà utilisé

class A {
    protected int x;
}

class B extends A{
    protected int x;
}